Fixed responsiveness - About section - Changed flex on small size Adjusted Input box side based on screen size

--- a/src/resources/sass/components/_form.scss
+++ b/src/resources/sass/components/_form.scss
@@ -9,6 +9,8 @@
 
   &__group {
     width: 100%;
+    min-width: 25rem;
+    max-width: 50rem;
   }
 
   &__input {
