--- a/src/resources/sass/pages/home/_contact.scss
+++ b/src/resources/sass/pages/home/_contact.scss
@@ -28,6 +28,6 @@
 
   &__form {
     padding: 1rem 6rem;
-    width: 60%;
+    width: 100%;
   }
 }
